Fixed align button

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -2627,7 +2627,7 @@ a.ui.blue.button.play-button,
   position: relative;
   background-color: #006eff !important;
   color: white;
-  margin-top: 8px;
+  /* margin-top: 8px; */
   height: 64px !important;
   width: 200px;
   line-height: 32px;
